--- a/app.css
+++ b/app.css
@@ -65,6 +65,13 @@ h1 {
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
+.deck .card:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+
 .deck .card.open {
     transform: rotateY(0);
     background: #02b3e4;
@@ -73,12 +80,15 @@ h1 {
 
 .deck .card.show {
     font-size: 33px;
+    -webkit-animation-duration: .3s;
 }
 
 .deck .card.match {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+    pointer-events: none;
+    -webkit-animation-duration: .5s;
 }
 
 /*
@@ -103,7 +113,15 @@ h1 {
     display: inline-block;
 }
 
+.score-panel .timer {
+  padding-left: 1cm;
+}
+
 .score-panel .restart {
     float: right;
     cursor: pointer;
+}
+
+.score-panel .restart:hover {
+  -webkit-transform: rotateZ(500deg);
 }
