--- a/app.css
+++ b/app.css
@@ -76,6 +76,7 @@ h1 {
     transform: rotateY(0);
     background: #02b3e4;
     cursor: default;
+    pointer-events: none;
 }
 
 .deck .card.show {
@@ -88,7 +89,7 @@ h1 {
     background: #02ccba;
     font-size: 33px;
     pointer-events: none;
-    -webkit-animation-duration: .5s;
+    -webkit-animation-duration: .6s;
 }
 
 /*
